<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.christanismerilbanzouzi.bance_project.Detailsctivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/text_titleId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deailles"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/image_details"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:layout_marginTop="-25dp"
        android:contentDescription="@string/image_artcicle"
        android:src="@drawable/wywffcah_400x400" />

    <TextView
        android:layout_marginTop="3dp"
        android:id="@+id/name_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avaible_article_on"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginStart="5dp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:layout_marginTop="2dp"
        android:id="@+id/price_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prix"
        android:textSize="30sp"
        android:layout_marginStart="160dp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:layout_marginTop="2dp"
        android:id="@+id/description_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_article"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:textColor="@color/colorBlack"/>

    <Button
        android:id="@+id/btn_ajouter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorBlack"
        android:text="@string/ajouter_au_pannier"
        android:textColor="@color/colorWhite" />

</LinearLayout>
