<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="8dp"
    tools:context="com.example.christanismerilbanzouzi.bance_project.HomeActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:padding="16dp"
        android:id="@+id/linearLayout">
        <ImageView
            android:id="@+id/articleImage"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:contentDescription="@string/vestSanCapuche"
            android:src="@drawable/pull_bance_noir_sans_capuche"/>

        <TextView
            android:id="@+id/articleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_collection"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/articlePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentDate"/>
    </LinearLayout>

    <TextView
        android:id="@+id/titleNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:text="@string/promotitle"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:text="@string/descriptionveste"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="17sp" />

    <Button
        android:id="@+id/goShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorBlack"
        android:text="@string/name_shop"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorWhite" />

</RelativeLayout>
