<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_shop"
          android:title="@string/name_shop"
        />
    <item android:id="@+id/action_account"
        android:title="@string/name_account"
        />

    <item android:title=""
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home__white"
        app:showAsAction="always" />

    <item android:title=""
        android:id="@+id/action_location"
        android:icon="@drawable/ic_map_location"
        app:showAsAction="always" />

    <item android:title=""
        android:id="@+id/action_caddy"
        android:icon="@drawable/ic_cart"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_droit"
        android:title="@string/droits" />

</menu>