<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.christanismerilbanzouzi.bance_project.Authentification">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@color/colorBlack"
            android:gravity="center"
            android:text="@string/signIn"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <Button
            android:id="@+id/voirSimple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:text="@string/voir_simplement"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"/>


    </LinearLayout>

    <TextView
        android:id="@+id/texTitleAutho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/titleWelcome"
        android:textColor="@color/colorBlack"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/texTitleAutho"
        android:layout_marginTop="36dp"
        android:text="@string/textIntro"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editId"
        android:hint="@string/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editId"
        android:layout_below="@+id/editId"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

</RelativeLayout>
