<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_height="200dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="15dp"
    >

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack">

        <ImageView
            android:id="@+id/recycler_article_image"
            android:scaleType="centerCrop"
            android:src="@drawable/wywffcah_400x400"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/copyRight"/>

        <TextView
            android:id="@+id/recycler_article_name"
            android:text="@string/avaible_article_on"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginStart="10dp"
            android:id="@+id/recycler_article_price"
            android:text="@string/avaible_article_price"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</android.support.v7.widget.CardView>